codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__delegation_status_surface_preview.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: "status_preview_line(&mut chat, &[StatusLineItem::DelegationMode])"
---
Delegation proactive/4
