codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_dictation_final_in_composer.snap
---
source: tui/src/chatwidget/tests/dictation.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Final live transcript.                                                        "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
