codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__push_to_talk_listening_footer.snap
---
source: tui/src/chatwidget/tests/dictation.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  F8 listening · release to insert                                              "
