codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__push_to_talk_streaming_preview.snap
---
source: tui/src/chatwidget/tests/dictation.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"  final words still changing                                                    "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"   Space listening · release to insert                                          "
